--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ a {
   .intro {
     display: grid;
     grid-template-rows: repeat(7, auto);
-    grid-template-columns: repeat(7, auto); }
+    grid-template-columns: repeat(7, auto);
+    animation: zoom-in 2s ease-out; }
     .intro::after {
       display: inline-block;
       content: url("assets/sun-planets72-01.png");
@@ -152,6 +153,7 @@ a {
       grid-column: 1/2; }
       .participation::before {
         content: url("assets/sun-planets72-04.png");
+        z-index: 0;
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
