--- a/style.scss
+++ b/style.scss
@@ -57,6 +57,7 @@ a {
         display: grid;
         grid-template-rows: repeat(7, auto);
         grid-template-columns: repeat(7, auto);
+        animation: zoom-in 2s ease-out;
         &::after {
             display: inline-block;
             content: url('assets/sun-planets72-01.png');
@@ -126,17 +127,6 @@ a {
 }
 
 .explanation {
-    // @include breakpoint(large) {
-    
-    //     animation: shrink-1 2s ease-out;
-    //     &::after{
-    //         content: '';
-    //         width: 250px;
-    //         height: 250px;
-    //         grid-column: 1/2;
-    //         border: 1px solid white;
-    //     }
-    // }
     display: grid;
     @include breakpoint(large) {
         position: relative;
@@ -167,6 +157,7 @@ a {
         grid-column: 1/2;
         &::before {
             content: url('assets/sun-planets72-04.png');
+            z-index: 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
             display: inline-block;
