--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Share+Tech+Mono");
+@keyframes zoom-in {
+  0% {
+    transform: scale(0.3); }
+  100% {
+    transform: scale(1.3); } }
 @-moz-keyframes spin {
   100% {
     -moz-transform: rotate(360deg); } }
@@ -14,7 +19,7 @@
   0% {
     left: -2000px; }
   100% {
-    left: -600px; } }
+    left: -678px; } }
 @keyframes slide-in-left {
   0% {
     right: -2000px; }
@@ -64,8 +69,11 @@ a {
   .intro {
     display: grid;
     grid-template-rows: repeat(7, auto);
-    grid-template-columns: repeat(7, auto);
-    animation: zoom-in 2s ease-out; }
+    grid-template-columns: repeat(7, auto); }
+    .intro header, .intro .summary {
+      transform: scale(1.3);
+      transform: translateX(200px);
+      animation: zoom-in 2s ease-out; }
     .intro::after {
       display: inline-block;
       content: url("assets/sun-planets72-01.png");
@@ -131,14 +139,13 @@ a {
       grid-row: 1/2;
       grid-column: 2/3; }
       .explanation::before {
-        content: url("assets/sun-planets72-03.png");
+        content: url("assets/astroguy.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
         position: absolute;
         z-index: 0;
-        top: -300px;
-        left: -600px;
+        left: -678px;
         animation: slide-in-right 3s;
         transition: all 3s;
         transition-timing-function: ease-out; } }
@@ -152,7 +159,7 @@ a {
       grid-row: 2/3;
       grid-column: 1/2; }
       .participation::before {
-        content: url("assets/sun-planets72-04.png");
+        content: url("assets/sun-planets72-03.png");
         z-index: 0;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -209,13 +216,15 @@ a {
       grid-template-columns: 25% 25% 25% 25%;
       position: relative; }
       .wrapper::after {
-        content: url("assets/astroguy.png");
+        content: url("assets/astronautplanet.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
         position: absolute;
-        top: 100px;
-        right: 0; } }
+        top: -100px;
+        right: 0;
+        overflow: hidden;
+        transform: scale(0.65); } }
 
 .design-selection {
   grid-row: 1/2;
