--- a/style.scss
+++ b/style.scss
@@ -57,7 +57,11 @@ a {
         display: grid;
         grid-template-rows: repeat(7, auto);
         grid-template-columns: repeat(7, auto);
-        animation: zoom-in 2s ease-out;
+        & header, & .summary {
+            transform: scale(1.3);
+            transform: translateX(200px);
+            animation: zoom-in 2s ease-out;
+        }
         &::after {
             display: inline-block;
             content: url('assets/sun-planets72-01.png');
@@ -133,14 +137,13 @@ a {
         grid-row: 1/2;
         grid-column: 2/3;
             &::before {
-                content: url('assets/sun-planets72-03.png');
+                content: url('assets/astroguy.png');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 display: inline-block;
                 position: absolute;
                 z-index: 0;
-                top: -300px;
-                left: -600px;
+                left: -678px;
                 animation: slide-in-right 3s;
                 transition: all 3s;
                 transition-timing-function: ease-out;
@@ -156,7 +159,7 @@ a {
         grid-row: 2/3;
         grid-column: 1/2;
         &::before {
-            content: url('assets/sun-planets72-04.png');
+            content: url('assets/sun-planets72-03.png');
             z-index: 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -221,13 +224,15 @@ footer {
         grid-template-columns: 25% 25% 25% 25%;
         position: relative;
         &::after {
-            content: url('assets/astroguy.png');
+            content: url('assets/astronautplanet.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             display: inline-block;
             position: absolute;
-            top: 100px;
+            top: -100px;
             right: 0;
+            overflow: hidden;
+            transform: scale(.65);
         }
     }
 }
