--- a/_partials.scss
+++ b/_partials.scss
@@ -6,6 +6,11 @@
     }
 }
 
+@keyframes zoom-in {
+    0%{ transform: scale(.3); }
+    100%{ transform: scale(1.3); }
+}
+
 @-moz-keyframes spin {
     100% {
         -moz-transform: rotate(360deg);
@@ -25,7 +30,7 @@
 
 @keyframes slide-in-right {
     0% { left: -2000px; }
-    100% { left: -600px; }
+    100% { left: -678px; }
 }
 
 @keyframes slide-in-left {
