--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   0% {
     transform: scale(0.3); }
   100% {
-    transform: scale(1.3); } }
+    transform: scale(1); } }
 @-moz-keyframes spin {
   100% {
     -moz-transform: rotate(360deg); } }
@@ -42,7 +42,8 @@ abbr {
 h1,
 h2,
 h3 {
-  font-family: 'Share Tech Mono', monospace;}
+  font-family: "Pacifico", cursive;
+  font-weight: 300; }
 
 header {
   text-align: center;
@@ -70,9 +71,8 @@ a {
     grid-template-rows: repeat(7, auto);
     grid-template-columns: repeat(7, auto); }
     .intro header, .intro .summary {
-      transform: scale(1.3);
-      transform: translateX(200px);
-      animation: zoom-in 2s ease-out; }
+      transform: scale(1);
+      animation: zoom-in 1s ease-out; }
     .intro::after {
       display: inline-block;
       content: url("assets/sun-planets72-01.png");
