--- a/style.css
+++ b/style.css
@@ -161,13 +161,7 @@ a {
 
 .benefits {
   display: grid;
-  z-index: 100;
-  background-image: url("assets/sun-planets72-02.png");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position-y: center;
-  background-position-x: center;
-  background-size: 400px; }
+  z-index: 100; }
   @media (min-width: 50em) {
     .benefits {
       position: relative;
@@ -187,7 +181,13 @@ a {
 
 .requirements {
   line-height: 1.8rem;
-  margin-top: 2em; }
+  margin-top: 2em;
+  background-image: url("assets/sun-planets72-02.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position-y: center;
+  background-position-x: center;
+  background-size: 400px; }
   @media (min-width: 50em) {
     .requirements {
       grid-row: 4/5;
@@ -224,6 +224,10 @@ a {
         right: 0;
         overflow: hidden;
         transform: scale(0.65); } }
+
+.wrapper a {
+  color: #3f5866;
+  font-weight: bolder; }
 
 .design-selection {
   grid-row: 1/2;
