--- a/style.scss
+++ b/style.scss
@@ -170,12 +170,6 @@ a {
 .benefits {
     display: grid;
     z-index: 100;
-    background-image: url('assets/sun-planets72-02.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position-y: center;
-    background-position-x: center; 
-    background-size: 400px;
     @include breakpoint(large) {
         position: relative;
         grid-row: 3/4;
@@ -198,6 +192,12 @@ a {
 .requirements {
     line-height: 1.8rem;
     margin-top: 2em;
+    background-image: url('assets/sun-planets72-02.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-y: center;
+    background-position-x: center; 
+    background-size: 400px;
     @include breakpoint(large) {
         grid-row: 4/5;
         grid-column: 1/3;
@@ -239,6 +239,10 @@ footer {
             transform: scale(.65);
         }
     }
+}
+.wrapper a{
+    color: $primary;
+    font-weight: bolder;
 }
 
 .design-selection {
