--- a/style.css
+++ b/style.css
@@ -60,12 +60,16 @@ a {
     transition: 1s; }
 
 .intro {
-  background-image: url("assets/sun-planets72-01.png");
+  background-image: url("/assets/sun-planets72-01.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-x: center;
+  -webkit-animation: slide-in-up 3s ease-out;
+  -moz-animation: slide-in-up 3s ease-out;
   animation: slide-in-up 3s ease-out;
   background-position-y: 100px;
+  -webkit-transition: background-image 3s;
+  -moz-transition: background-image 3s;
   transition: background-image 3s;
   background-size: 400px; }
   @media (min-width: 50em) {
@@ -73,8 +77,12 @@ a {
       background-size: 600px; }
       .intro header, .intro .summary {
         opacity: 1;
+        -moz-animation: fade-in 4s ease-out;
+        -webkit-animation: fade-in 4s ease-out;
         animation: fade-in 4s ease-out;
         text-align: center;
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
         transform: scale(1.1); } }
 
 .summary a {
@@ -116,7 +124,7 @@ a {
 
 .explanation {
   display: grid;
-  background-image: url("assets/astroguy.png");
+  background-image: url("/assets/astroguy.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-y: center;
@@ -128,19 +136,22 @@ a {
       grid-column: 2/3;
       background-image: none; }
       .explanation::before {
-        content: url("assets/astroguy.png");
+        content: url("/assets/astroguy.png");
         display: inline-block;
         position: absolute;
         z-index: 0;
         left: -678px;
+        -webkit-animation: slide-in-right 3s;
+        -moz-animation: slide-in-right 3s;
         animation: slide-in-right 3s;
-        transition: all 3s;
-        transition-timing-function: ease-out; } }
+        -webkit-transition: all 3s ease-out;
+        -moz-transition: all 3s ease-out;
+        transition: all 3s ease-out; } }
 
 .participation {
   display: grid;
   z-index: 100;
-  background-image: url("assets/sun-planets72-03.png");
+  background-image: url("/assets/sun-planets72-03.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-y: center;
@@ -153,7 +164,7 @@ a {
       grid-column: 1/2;
       background-image: none; }
       .participation::before {
-        content: url("assets/sun-planets72-03.png");
+        content: url("/assets/sun-planets72-03.png");
         background-attachment: inherit;
         z-index: 0;
         display: inline-block;
@@ -172,7 +183,7 @@ a {
       grid-row: 3/4;
       grid-column: 2/3; }
       .benefits::before {
-        content: url("assets/sun-planets72-02.png");
+        content: url("/assets/sun-planets72-02.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
@@ -186,7 +197,7 @@ a {
 .requirements {
   line-height: 1.8rem;
   margin-top: 2em;
-  background-image: url("assets/sun-planets72-02.png");
+  background-image: url("/assets/sun-planets72-02.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-y: center;
@@ -211,7 +222,7 @@ a {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto auto;
-  background-image: url("assets/astronautplanet.png");
+  background-image: url("/assets/astronautplanet.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-x: center;
@@ -223,7 +234,7 @@ a {
       position: relative;
       background-image: none; }
       .wrapper::after {
-        content: url("assets/astronautplanet.png");
+        content: url("/assets/astronautplanet.png");
         display: inline-block;
         position: absolute;
         top: -100px;
