--- a/style.scss
+++ b/style.scss
@@ -54,20 +54,28 @@ a {
 }
 
 .intro {
-    background-image: url('assets/sun-planets72-01.png');
+    background-image: url('/assets/sun-planets72-01.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-x: center;
+    -webkit-animation: slide-in-up 3s ease-out;
+    -moz-animation: slide-in-up 3s ease-out;
     animation: slide-in-up 3s ease-out;
     background-position-y: 100px;
+    -webkit-transition:  background-image 3s;
+    -moz-transition:  background-image 3s;
     transition: background-image 3s;
     background-size: 400px;
     @include breakpoint(large) {
         background-size: 600px;
         & header, & .summary {
             opacity: 1;
+            -moz-animation: fade-in 4s ease-out;
+            -webkit-animation: fade-in 4s ease-out;
             animation: fade-in 4s ease-out;
             text-align: center;
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
             transform: scale(1.1);
         }
     }
@@ -120,7 +128,7 @@ a {
 
 .explanation {
     display: grid;
-    background-image: url('assets/astroguy.png');
+    background-image: url('/assets/astroguy.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-y: center;
@@ -131,14 +139,17 @@ a {
         grid-column: 2/3;
         background-image: none;
             &::before {
-                content: url('assets/astroguy.png');
+                content: url('/assets/astroguy.png');
                 display: inline-block;
                 position: absolute;
                 z-index: 0;
                 left: -678px;
+                -webkit-animation: slide-in-right 3s;
+                -moz-animation: slide-in-right 3s;
                 animation: slide-in-right 3s;
-                transition: all 3s;
-                transition-timing-function: ease-out;
+                -webkit-transition: all 3s ease-out;
+                -moz-transition: all 3s ease-out;
+                transition: all 3s ease-out;
             }
     }
 }
@@ -146,7 +157,7 @@ a {
 .participation {
     display: grid;
     z-index: 100;
-    background-image: url('assets/sun-planets72-03.png');
+    background-image: url('/assets/sun-planets72-03.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-y: center;
@@ -158,7 +169,7 @@ a {
         grid-column: 1/2;
         background-image: none;
         &::before {
-            content: url('assets/sun-planets72-03.png');
+            content: url('/assets/sun-planets72-03.png');
             background-attachment: inherit;
             z-index: 0;
             display: inline-block;
@@ -179,7 +190,7 @@ a {
         grid-row: 3/4;
         grid-column: 2/3;
             &::before {
-                content: url('assets/sun-planets72-02.png');
+                content: url('/assets/sun-planets72-02.png');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 display: inline-block;
@@ -196,7 +207,7 @@ a {
 .requirements {
     line-height: 1.8rem;
     margin-top: 2em;
-    background-image: url('assets/sun-planets72-02.png');
+    background-image: url('/assets/sun-planets72-02.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-y: center;
@@ -225,7 +236,7 @@ footer {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto;
-    background-image: url('assets/astronautplanet.png');
+    background-image: url('/assets/astronautplanet.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-x: center;
@@ -236,7 +247,7 @@ footer {
         position: relative;
         background-image: none;
         &::after {
-            content: url('assets/astronautplanet.png');
+            content: url('/assets/astronautplanet.png');
             display: inline-block;
             position: absolute;
             top: -100px;
