--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a {
     transition: 1s; }
 
 .intro {
-  background-image: url("/assets/sun-planets72-01.png");
+  background-image: url(/assets/sun-planets72-01.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-x: center;
