--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,7 @@ a {
 }
 
 .intro {
-    background-image: url('/assets/sun-planets72-01.png');
+    background-image: url(/assets/sun-planets72-01.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-x: center;
