--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a {
 
 .explanation {
   display: grid;
-  background-image: url("/assets/astroguy.png");
+  background-image: url(/assets/astroguy.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-y: center;
@@ -136,7 +136,7 @@ a {
       grid-column: 2/3;
       background-image: none; }
       .explanation::before {
-        content: url("/assets/astroguy.png");
+        content: url(/assets/astroguy.png);
         display: inline-block;
         position: absolute;
         z-index: 0;
@@ -151,7 +151,7 @@ a {
 .participation {
   display: grid;
   z-index: 100;
-  background-image: url("/assets/sun-planets72-03.png");
+  background-image: url(/assets/sun-planets72-03.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-y: center;
@@ -164,7 +164,7 @@ a {
       grid-column: 1/2;
       background-image: none; }
       .participation::before {
-        content: url("/assets/sun-planets72-03.png");
+        content: url(/assets/sun-planets72-03.png);
         background-attachment: inherit;
         z-index: 0;
         display: inline-block;
@@ -183,7 +183,7 @@ a {
       grid-row: 3/4;
       grid-column: 2/3; }
       .benefits::before {
-        content: url("/assets/sun-planets72-02.png");
+        content: url(/assets/sun-planets72-02.png);
         background-repeat: no-repeat;
         background-attachment: fixed;
         display: inline-block;
@@ -197,7 +197,7 @@ a {
 .requirements {
   line-height: 1.8rem;
   margin-top: 2em;
-  background-image: url("/assets/sun-planets72-02.png");
+  background-image: url(/assets/sun-planets72-02.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-y: center;
@@ -222,7 +222,7 @@ a {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto auto;
-  background-image: url("/assets/astronautplanet.png");
+  background-image: url(/assets/astronautplanet.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-x: center;
@@ -234,7 +234,7 @@ a {
       position: relative;
       background-image: none; }
       .wrapper::after {
-        content: url("/assets/astronautplanet.png");
+        content: url(/assets/astronautplanet.png);
         display: inline-block;
         position: absolute;
         top: -100px;
