--- a/style.scss
+++ b/style.scss
@@ -128,7 +128,7 @@ a {
 
 .explanation {
     display: grid;
-    background-image: url('/assets/astroguy.png');
+    background-image: url(/assets/astroguy.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-y: center;
@@ -139,7 +139,7 @@ a {
         grid-column: 2/3;
         background-image: none;
             &::before {
-                content: url('/assets/astroguy.png');
+                content: url(/assets/astroguy.png);
                 display: inline-block;
                 position: absolute;
                 z-index: 0;
@@ -157,7 +157,7 @@ a {
 .participation {
     display: grid;
     z-index: 100;
-    background-image: url('/assets/sun-planets72-03.png');
+    background-image: url(/assets/sun-planets72-03.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-y: center;
@@ -169,7 +169,7 @@ a {
         grid-column: 1/2;
         background-image: none;
         &::before {
-            content: url('/assets/sun-planets72-03.png');
+            content: url(/assets/sun-planets72-03.png);
             background-attachment: inherit;
             z-index: 0;
             display: inline-block;
@@ -190,7 +190,7 @@ a {
         grid-row: 3/4;
         grid-column: 2/3;
             &::before {
-                content: url('/assets/sun-planets72-02.png');
+                content: url(/assets/sun-planets72-02.png);
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 display: inline-block;
@@ -207,7 +207,7 @@ a {
 .requirements {
     line-height: 1.8rem;
     margin-top: 2em;
-    background-image: url('/assets/sun-planets72-02.png');
+    background-image: url(/assets/sun-planets72-02.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-y: center;
@@ -236,7 +236,7 @@ footer {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto;
-    background-image: url('/assets/astronautplanet.png');
+    background-image: url(/assets/astronautplanet.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-x: center;
@@ -247,7 +247,7 @@ footer {
         position: relative;
         background-image: none;
         &::after {
-            content: url('/assets/astronautplanet.png');
+            content: url(/assets/astronautplanet.png);
             display: inline-block;
             position: absolute;
             top: -100px;
